Sat Apr 30 20:06:36 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread.c (do_select): remove useless ifdef. time calculation
	  is not heavy weight.

Sat Apr 30 16:48:36 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* benchmark/bm_io_select3.rb: New.

Sat Apr 30 16:27:09 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* io.c (copy_stream_body, rb_io_s_copy_stream): move rb_fd_init()
	  from copy_stream_body to rb_io_s_copy_stream. fds of passing
	  rb_fd_term() have to be guaranteed initialized.

Sat Apr 30 16:13:17 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* benchmark/bm_io_select.rb, benchmark/bm_io_select2.rb: New.
	  based on a patch from Eric Wong at [Feature #4531]

Sat Apr 30 03:25:53 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* test/io/wait/test_io_wait.rb: New. for testing ext/io/wait.
	  the patch was written by Eric Wong. [Feature #4531]

Sat Apr 30 00:34:56 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* include/ruby/win32.h: remove redundant declaration of
	  rb_w32_time_subtract().

Sat Apr 30 00:16:40 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread_pthread.c (gvl_init): fix hangup if GVL_SIMPLE_LOCK=1.
	  We don't have to call mutex_unlock() before initialize it!

Fri Apr 29 13:15:15 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread_win32.c (native_cond_timedwait): New. r31373 caused
	  win32 build failure.

	* thread_win32.c (__cond_timedwait, abs_timespec_to_timeout_ms):
	  New helper functions.

	* win32/win32.c (rb_w32_time_subtract): rename from subtract and
	  remove static.


Fri Apr 29 10:43:09 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* benchmark/bm_vm4_pipe.rb: Add two new benchmark for GVL
	  performance. They was written by Koichi Sasada.
	* benchmark/bm_vm4_thread_pass.rb: ditto.

Fri Apr 29 10:25:31 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* vm_method.c (rb_clear_cache_by_class): Revert r29673. It made